# BackendExtravaganza

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.dockerfile  php.dockerfile
backend/app/Models/: Tournament.php
backend/database/migrations/: 2020_10_21_193827_create_tournaments_table.php
backend/routes/: api.php
cs-backend/TekkenHub/: TekkenHub.sln
cs-backend/TekkenHub/TekkenHub/: Program.cs  Startup.cs  TekkenHub.csproj  config.json
docker/nginx/: nginx.conf
docker/php/: php.ini
docker/php-fpm/: Dockerfile
ex-backend/: Dockerfile
ex-backend/src/: .gitignore  README.md  mix.exs
ex-backend/src/config/: config.exs  dev.exs  prod.exs  prod.secret.exs  test.exs
ex-backend/src/lib/: src_web.ex
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.tsx  app.scss  requests.ts  style.ts
frontend/src/components/: characterSelectDropdown.tsx  (+2 more)
go-backend/: config.json  go.mod  go.sum  main.go
java-backend/: pom.xml
nginx/: default.conf
rb-backend/: Rakefile
rb-backend/config/: application.rb  cable.yml  credentials.yml.enc  database.yml  master.key  routes.rb
rb-backend/db/: schema.rb
rust-backend/: .env  Cargo.toml  Rocket.toml
rust-backend/src/: config.rs  main.rs  schema.rs
rust-backend/src/api/: blog_controllers.rs  mod.rs  tournament_controllers.rs
rust-backend/src/models/: blog_repository.rs  mod.rs
scala-backend/: README.md  build.sbt
scala-backend/.bsp/: sbt.json
scala-backend/app/: Module.scala  RequestHandler.scala
src/config/: database.php
(+78 files in other folders)
